--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
+version: '3.8'
+
 services:
   mongo:
     image: mongo:5.0
     container_name: mongodb
     restart: always
     ports:
-      - "${MONGO_PORT}:27017"
+      - "27017:27017"  # Mapear a porta do MongoDB para o host
     volumes:
-      - mongo_data:/data/db
+      - mongo_data:/data/db  # Persistir dados do MongoDB em um volume
 
 volumes:
-  mongo_data:
+  mongo_data:  # Volume para armazenar os dados
