--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: '3.8'
+version: "3.8"
 
 services:
   mongo:
     image: mongo:5.0
     container_name: mongodb
     restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ADMIN}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     ports:
-      - "27017:27017"  # Mapear a porta do MongoDB para o host
+      - "${MONGO_PORT}:27017" # Mapear a porta do MongoDB para o host
     volumes:
-      - mongo_data:/data/db  # Persistir dados do MongoDB em um volume
+      - mongo_data:/data/db # Persistir dados do MongoDB em um volume
 
 volumes:
-  mongo_data:  # Volume para armazenar os dados
+  mongo_data: # Volume para armazenar os dados
