--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
-version: "3.8"
+version: '3.8'
 
 services:
   mongo:
     image: mongo:5.0
     container_name: mongodb
     restart: always
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ADMIN}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     ports:
-      - "${MONGO_PORT}:27017" # Mapear a porta do MongoDB para o host
+      - "27017:27017"  # Mapear a porta do MongoDB para o host
     volumes:
-      - mongo_data:/data/db # Persistir dados do MongoDB em um volume
+      - mongo_data:/data/db  # Persistir dados do MongoDB em um volume
+
+  flask-api:
+    build: .
+    container_name: flask-api
+    ports:
+      - "5000:5000"
+    depends_on:
+      - mongo
 
 volumes:
-  mongo_data: # Volume para armazenar os dados
+  mongo_data:  # Volume para armazenar os dados
