--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
 
   populador:
     container_name: populador
+    restart: always
     build: 
       context: .
       dockerfile: ./populador/Dockerfile
