--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      TZ: America/Sao_Paulo
     ports:
       - "3306:3306"
     volumes:
@@ -20,6 +21,7 @@ services:
     environment:
       PMA_HOST: mysql_db
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      TZ: America/Sao_Paulo
     ports:
       - "8081:80"
     depends_on:
@@ -30,6 +32,8 @@ services:
   populador:
     container_name: populador
     restart: always
+    environment:
+      TZ: America/Sao_Paulo
     build: 
       context: .
       dockerfile: ./populador/Dockerfile
@@ -49,6 +53,8 @@ services:
       - ${FLASK_PORT}:${FLASK_PORT}
     networks:
       - api-estrela
+    environment:
+      TZ: America/Sao_Paulo
 
 volumes:
   mysql_data_api_estrela:
